--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capped-at-one",
+  "name": "quiz-comp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "jest"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
@@ -18,7 +17,6 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.2",
     "@types/node": "^18.7.6",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
@@ -28,8 +26,6 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.3.0",
     "fast-check": "^3.1.4",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.5",
     "typescript": "^4.9.3",
     "vite": "^3.0.0",
     "vite-plugin-checker": "^0.4.9",
